fixing background on mobile issue

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -10,6 +10,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    min-height: 100%;
 }
 
 .splash-page {
